--- a/test_4m.html
+++ b/test_4m.html
@@ -16,7 +16,7 @@
  </head>
  <body>
 	<div name="top" class="navbar navbar-inverse navbar-fixed-bottom" role="navigation" align="center">
-		<img src="./gif/hhe.gif" alt="" />
+		<img src="images/hhe.gif" alt="" />
 	</div>
 
 	<div name="content" class="">
