--- a/login.html
+++ b/login.html
@@ -15,10 +15,27 @@
   <title>welcome</title>
  </head>
  <body>
-  
+	<h1><span class="label label-primary">欢迎使用后台管理体统</span></h1>
+	<div style="width:300px; height:200px; background:#F5F5F5" align="center">
+		<div class="col-md-2">
+			<table class="table">
+				<tr>
+					<td>用户名：</td>
+					<td><input type="text" name="username"/></td>
+				</tr>
+				<tr>
+					<td>密码：</td>
+					<td><input type="password" /><br /></td>
+				</tr>
+				<tr>
+					<td><button class="btn btn-info">登陆</button></td>
+					<td><button class="btn btn-info">取消</button></td>
+				</tr>
+			</table>
+		</div>
+	</div>
 
   <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
  </body>
 </html>
