--- a/login.html
+++ b/login.html
@@ -15,9 +15,12 @@
   <title>welcome</title>
  </head>
  <body>
-	<h1><span class="label label-primary">欢迎使用后台管理体统</span></h1>
-	<div style="width:300px; height:200px; background:#F5F5F5" align="center">
+	<div class="" style="margin-left: auto; margin-right: auto; *zoom: 1;">
+		<h1><span class="label label-primary">欢迎使用后台管理体统</span></h1>
+	</div>
+	<div class="container" style="width:300px; height:200px; background:#F5F5F5; padding-top:25px">
 		<div class="col-md-2">
+		<form class="form-signin" role="form">
 			<table class="table">
 				<tr>
 					<td>用户名：</td>
@@ -28,11 +31,24 @@
 					<td><input type="password" /><br /></td>
 				</tr>
 				<tr>
-					<td><button class="btn btn-info">登陆</button></td>
-					<td><button class="btn btn-info">取消</button></td>
+					<td><button class="btn btn-info" type="submit">登陆</button></td>
+					<td><button class="btn btn-info" type="cancel">取消</button></td>
 				</tr>
 			</table>
+		</form>
 		</div>
+	</div>
+
+	<div class="container">
+		<form class="form-signin" role="form" action="">
+			<h2 class="form-signin-heading">Please sign in</h2>
+			<input type="text" class="form-control" placeholder="Email address" required autofocus>
+			<input type="password" class="form-control" placeholder="Password" required>
+			<label class="checkbox">
+				<input type="checkbox" value="remember-me"> Remember me
+			</label>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+		</form>
 	</div>
 
   <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
