--- a/pages.html
+++ b/pages.html
@@ -112,7 +112,54 @@
 
   <div id="" class="container">
 	<div class="">
-		
+		<h3 style="color:red">试试警告框,有的还可以进行关闭设置</h3>
+		<div class="alert alert-success">alert-success</div>
+		<div class="alert alert-info">alert-info</div>
+		<div class="alert alert-warning">alert-warning</div>
+		<div class="alert alert-danger">alert-danger</div>
+	</div>
+  </div>
+
+  <div class="container">
+	<h3 style="color:red">
+	跨浏览器兼容性:
+	进度条使用了CSS3的transition和animation属性来完成一些效果。
+	这些特性在Internet Explorer 9或以下版本中、Firefox的老版本中没有被支持。Opera 12不支持animation属性。
+	</h3>
+	<div class="progress">
+	  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+	    <span class="sr-only">60% Complete</span>
+	  </div>
+	</div>
+	
+	<div class="progress">
+	  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+	    <span class="sr-only">60% Complete</span>
+	  </div>
+	</div>
+
+	<div class="progress progress-striped">
+		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+			<span class="sr-only">60% Complete</span>
+		</div>
+	</div>
+
+	<!--
+	1.给process类后面再加上progress-striped这个类,就成了带有条纹的样式了.IE8不支持这个;
+	2.再给.progress-striped加上.active就能使它由右向左运动。在IE的所有版本不可用.
+	3.把多个进度条放入同一个.progress容器,就能使它们堆叠。
+	-->
+	<div class="progress progress-striped active">
+	  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+	    <span class="sr-only">60% Complete</span>
+	  </div>
+	</div>
+	
+	<div class="progress">
+	  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">
+	    <span class="sr-only">60% Complete</span>
+	  </div>
+	  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" style="width:40%;"></div>
 	</div>
   </div>
 
